print output and add TW new lease

--- a/spotify-flask_dev/views/index.html
+++ b/spotify-flask_dev/views/index.html
@@ -40,6 +40,7 @@
             <option value="JP">Japan</option>
             <option value="FI">Finland</option>
             <option value="IS">Iceland</option>
+            <option value="TW">Taiwan</option>
           </select>
           <span class="input-group-btn">
             <button class="btn btn-violet" type="submit">Submit</button>
