fix send data type and make recommend api work on frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,8 @@
         </div>
       </form>
       <section class="dreams">
-        <ul id="new-releases" class="sp-container">
+        <!-- <ul id="new-releases" class="sp-container"> -->
+        <ul id="recommend" class="sp-container">
         </ul>
       </section>
     </main>
