--- a/templates/style.css
+++ b/templates/style.css
@@ -15,6 +15,11 @@ body {
   padding: 40px 0;
 }
 
+#recommend {
+  max-width: 1800px;
+  padding: 40px 0;
+}
+
 .sp-container {
   display: flex;
   flex-flow: row wrap;
