--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <h1>
-        New Releases by Country
+        New Recommend by Country
       </h1>
       <h4>
-        Spotify API example in Python/Flask
+        Run Spotify APIs in Python/Flask
       </h4>
       <a class="btn btn-sm btn-violet" href="https://glitch.com/edit/#!/spotify-flask">
         Remix this in Glitch
