rollback (only filter recommend by artist seed)

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <h1>
-        New Recommend by Country
+        Recommend by artist
       </h1>
       <h4>
-        Run Spotify APIs in Python/Flask
+        Python/Flask playlist via Spotify API 
       </h4>
       <a class="btn btn-sm btn-violet" href="https://glitch.com/edit/#!/spotify-flask">
         Remix this in Glitch
@@ -27,20 +27,16 @@
     </header>
 
     <main>
-      <p>Choose a country</p>
+      <p>Choose an artist</p>
       <form>
         <div class="input-group col-md-6">
           <select class="form-control">
-            <option value="SE">Sweden</option>
-            <option value="US">United States</option>
-            <option value="CA">Canada</option>
-            <option value="GB">United Kingdom</option>
-            <option value="FR">France</option>
-            <option value="DE">Germany</option>
-            <option value="JP">Japan</option>
-            <option value="FI">Finland</option>
-            <option value="IS">Iceland</option>
-            <option value="TW">Taiwan</option>
+            <option value="the roots">the roots</option>
+            <option value="daft punk">daft punk</option>
+            <option value="common">common</option>
+            <option value="dj deckstream">dj deckstream</option>
+            <option value="free tempo">free tempo</option>
+            <option value="house rulz">house rulz</option>
           </select>
           <span class="input-group-btn">
             <button class="btn btn-violet" type="submit">Submit</button>
@@ -48,7 +44,7 @@
         </div>
       </form>
       <section class="dreams">
-        <!-- <ul id="new-releases" class="sp-container"> -->
+        <!--<ul id="new-releases" class="sp-container"> -->
         <ul id="recommend" class="sp-container">
         </ul>
       </section>
