fix artist name list to always get API returned data

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
             <option value="daft punk">daft punk</option>
             <option value="common">common</option>
             <option value="dj deckstream">dj deckstream</option>
-            <option value="free tempo">free tempo</option>
-            <option value="house rulz">house rulz</option>
+            <option value="freeTempo">free tempo</option>
+            <option value="Honne">Honne</option>
           </select>
           <span class="input-group-btn">
             <button class="btn btn-violet" type="submit">Submit</button>
