add choose song genre button (only html)

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,11 @@
     </header>
 
     <main>
+    <div class="inline space-after">
+          <h3>Current genres: <span id="current-genres"></span></h3>
+          <button class="btn btn-aubergine btn-sm" data-toggle="modal" data-target="#genre-select" onclick="getGenresList();">Choose genres</button>
+        </div>
+
       <p>Choose an artist</p>
       <form>
         <div class="input-group col-md-6">
