pass access_token from flask to html

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.js"></script>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script> var token__ = '{{ access_token }}';</script>  
 
   </head>
   <body>
