--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,11 @@
     </header>
 
     <main>
+
+      <div class="modal-dialog">
+      <div class="modal-content">
+      <div class="modal-header">
+
     <div class="inline space-after">
           <h3>Current genres: <span id="current-genres"></span></h3>
           <button class="btn btn-aubergine btn-sm" data-toggle="modal" data-target="#genre-select" onclick="getGenresList();">Choose genres</button>
@@ -45,6 +50,16 @@
         <!-- Buttons for each genre to be appended here -->
       </label>
     </div>
+
+  <div class="modal-footer">
+  <button type="button" class="btn btn-aubergine" data-dismiss="modal" onclick="getRecommendations();">Okay!</button>
+  </div>
+
+          
+     </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal --> 
+     
 
       <p>Choose an artist</p>
       <form>
