modify button color

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,14 +27,14 @@
          <h4>
             Python/Flask playlist via Spotify API 
          </h4>
-         <a class="btn btn-sm btn-violet" href="https://glitch.com/edit/#!/spotify-flask">
+         <a class="btn btn-gray btn-gray" href="https://glitch.com/edit/#!/spotify-flask">
          Remix this in Glitch
          </a>
       </header>
       <main>
         <div class="inline space-after">
           <h3>Current genres: <span id="current-genres"></span></h3>
-          <button class="btn btn-aubergine btn-sm" data-toggle="modal" data-target="#genre-select" onclick="getGenresList();">Choose genres</button>
+          <button class="btn btn-gray mb1 black bg-black" data-toggle="modal" data-target="#genre-select" onclick="getGenresList();">Choose genres</button>
         </div>
         <div class="modal fade" id="genre-select">
           <div class="modal-dialog">
@@ -64,7 +64,7 @@
                   <option value="Honne">Honne</option>
                </select>
                <span class="input-group-btn">
-               <button class="btn btn-violet" type="submit">Submit</button>
+               <button class="btn btn-gray mb1 black bg-black" type="submit">Submit</button>
                </span>
             </div>
          </form>
