--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
       <title>Spotify Flask Sample</title>
       <meta name="description" content="A cool thing made with Glitch">
       <!--<link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon"> -->
-      <link id="favicon" rel="icon" href="https://github.com/yennanliu/spotify_recommend_playlist/blob/master/ref/ms-icon-144x144.png" type="image/x-icon">
+      <link id="favicon" rel="icon" href="https://github.com/yennanliu/spotify_recommend_playlist/blob/master/ref/ms-icon-144x144.png" type="png">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
