add navbar to html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,30 @@
 <!DOCTYPE html>
 <html>
    <head>
+
+    <div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">playlistX</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/access_request">Artist_recommend</a></li>
+                <li><a href="/deletion_request">Slide_recommend</a></li>
+                <li><a href="/tool_report">others</a></li>
+                <li><a href="/dev">dev</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
       <title>Spotify Flask Sample</title>
       <meta name="description" content="A cool thing made with Glitch">
       <!--<link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon"> -->
