--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/access_request">Artist_recommend</a></li>
-                <li><a href="/deletion_request">Slide_recommend</a></li>
-                <li><a href="/tool_report">others</a></li>
+                <li><a href="/artist_recommend">Artist_recommend</a></li>
+                <li><a href="/slide_recommend">Slide_recommend</a></li>
+                <li><a href="/others">others</a></li>
                 <li><a href="/dev">dev</a></li>
             </ul>
         </div>
