add navbar to slide_recommend page (need to fix css layout)

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -3,6 +3,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">playlistX</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/artist_recommend">Artist_recommend</a></li>
+                <li><a href="/slide_recommend">Slide_recommend</a></li>
+                <li><a href="/others">others</a></li>
+                <li><a href="/dev">dev</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
 <link rel="stylesheet" href="/templates/slide_recommend.css">
