--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-	
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
 <link rel="stylesheet" href="/templates/slide_recommend.css">
@@ -36,11 +36,11 @@
 </head>
 <body>
   <div id="container">
-    <div class="buddy" style="display: block;"><div class="avatar"  style="display: block; background-image: url(https://1.bp.blogspot.com/_qEbjiFbQWGM/TCBVlN3mkYI/AAAAAAAADCM/7CjYqUHwbgY/s1600/workshop_modell_0126.jpg)"></div></div>
-    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://static.stylemagazin.hu/medias/29280/Nem-ehezik-a-Women-of-the-Year-legjobb-modell-dijara-eselyes-szepseg_32fc7c86954a8847610499a0fc7261e2.jpg)"></div></div>  
+    <div class="buddy" style="display: block;"><div class="avatar"  style="display: block; background-image: url(https://t2.genius.com/unsafe/600x600/https%3A%2F%2Fimages.genius.com%2F9f8cba3d7fe4e1fd4bc450c69d409af6.1000x1000x1.jpg)"></div></div>
+    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://www.vinyl-minded.com/images/2/220869.jpg)"></div></div>  
     <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)"></div></div>  
 <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://ell.h-cdn.co/assets/cm/15/01/54a769be3112d_-_elle-rata-insta-1-24375723.png)"></div></div>  
-    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://hircsarda.hu/wp-content/uploads/2016/03/orban1.jpeg)"></div></div>  
+    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://image13.m1905.cn/mdb/uploadfile/2017/0516/thumb_1_300_410_20170516090500773498.jpg)"></div></div>  
   </div>
 
   <script src="/templates/utility.js"></script>
