--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -1,52 +1,60 @@
-<!--modify from https://codepen.io/developingidea/pen/meAIn -->
 
+
+<!--modify from https://codepen.io/developingidea/pen/meAIn -->
 <!DOCTYPE html>
 <html>
-<head>
-
-    <div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">playlistX</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/artist_recommend">Artist_recommend</a></li>
-                <li><a href="/slide_recommend">Slide_recommend</a></li>
-                <li><a href="/others">others</a></li>
-                <li><a href="/dev">dev</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
-<link rel="stylesheet" href="/templates/style.css">
-<!-- <link rel="stylesheet" href="/templates/slide_recommend.css"> -->
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.js"></script>
-
-</head>
-<body>
-  <div id="container2">
-    <div class="buddy" style="display: block;"><div class="avatar"  style="display: block; background-image: url(https://t2.genius.com/unsafe/600x600/https%3A%2F%2Fimages.genius.com%2F9f8cba3d7fe4e1fd4bc450c69d409af6.1000x1000x1.jpg)"></div></div>
-    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://www.vinyl-minded.com/images/2/220869.jpg)"></div></div>  
-    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)"></div></div>  
-<div class="buddy"><div class="avatar" style="display: block; background-image: url(http://ell.h-cdn.co/assets/cm/15/01/54a769be3112d_-_elle-rata-insta-1-24375723.png)"></div></div>  
-    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://image13.m1905.cn/mdb/uploadfile/2017/0516/thumb_1_300_410_20170516090500773498.jpg)"></div></div>  
-  </div>
-
-  <script src="/templates/utility.js"></script>
-</body>
+   <head>
+      <div class="navbar navbar-inverse" role="navigation">
+         <div class="container">
+            <div class="navbar-header">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               </button>
+               <a class="navbar-brand" href="/">playlistX</a>
+            </div>
+            <div class="navbar-collapse collapse">
+               <ul class="nav navbar-nav">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/artist_recommend">Artist_recommend</a></li>
+                  <li><a href="/slide_recommend">Slide_recommend</a></li>
+                  <li><a href="/others">others</a></li>
+                  <li><a href="/dev">dev</a></li>
+               </ul>
+            </div>
+         </div>
+      </div>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+      <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
+      <link rel="stylesheet" href="/templates/style.css">
+      <!-- <link rel="stylesheet" href="/templates/slide_recommend.css"> -->
+      <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+      <script src="https://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script src="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.js"></script>
+   </head>
+   <body>
+      <div id="container2">
+         <div class="buddy" style="display: block;">
+            <div class="avatar"  style="display: block; background-image: url(https://t2.genius.com/unsafe/600x600/https%3A%2F%2Fimages.genius.com%2F9f8cba3d7fe4e1fd4bc450c69d409af6.1000x1000x1.jpg)"></div>
+         </div>
+         <div class="buddy">
+            <div class="avatar" style="display: block; background-image: url(http://www.vinyl-minded.com/images/2/220869.jpg)"></div>
+         </div>
+         <div class="buddy">
+            <div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)"></div>
+         </div>
+         <div class="buddy">
+            <div class="avatar" style="display: block; background-image: url(http://ell.h-cdn.co/assets/cm/15/01/54a769be3112d_-_elle-rata-insta-1-24375723.png)"></div>
+         </div>
+         <div class="buddy">
+            <div class="avatar" style="display: block; background-image: url(http://image13.m1905.cn/mdb/uploadfile/2017/0516/thumb_1_300_410_20170516090500773498.jpg)"></div>
+         </div>
+      </div>
+      <script src="/templates/utility.js"></script>
+   </body>
 </html>
+
