load needed js script

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -55,6 +55,7 @@
          </div>
       </div>
       <script src="/templates/utility.js"></script>
+      <script src="/templates/client.js"></script>
    </body>
 </html>
 
