--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -1,5 +1,3 @@
-
-
 <!--modify from https://codepen.io/developingidea/pen/meAIn -->
 <!DOCTYPE html>
 <html>
@@ -53,17 +51,21 @@
          <div class="buddy">
             <div class="avatar" style="display: block; background-image: url(http://image13.m1905.cn/mdb/uploadfile/2017/0516/thumb_1_300_410_20170516090500773498.jpg)"></div>
          </div>
+         {% for i in data %}
+         <td>{{i}}</td>
+         <div class="buddy">
+            <div class="avatar" style="display: block; background-image: url({})".format(i)>
+         </div>
+      </div>
+      {% endfor %}
       </div>
       <script src="/templates/utility.js"></script>
-      <script type="text/javascript"> 
-      //https://stackoverflow.com/questions/42499535/passing-a-json-object-from-flask-to-javascript
-      var pic_url = ('{{ data }}'); 
-      //var pic_url = ('{{ data }}')
-      //var pic_url = JSON.parse('{{ data | safe}}');
-      </script>
       <script src="/templates/client.js"></script>
-
-
+      <script type="text/javascript"> 
+         //https://stackoverflow.com/questions/42499535/passing-a-json-object-from-flask-to-javascript
+         var pic_url = ('{{ data }}').replace(/&#39;/g,"'");
+         var pic_url2 = ('data'); 
+         
+      </script>
    </body>
 </html>
-
