modify main page content

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,13 @@
    <body>
       <header>
          <h1>
-            Recommend by artist
+            Song Recommendation 
          </h1>
          <h4>
-            Python/Flask playlist via Spotify API 
+            via Python/Flask/Spotify API 
          </h4>
-         <a class="btn btn-gray btn-gray" href="https://glitch.com/edit/#!/spotify-flask">
-         Remix this in Glitch
+         <a class="btn btn-gray btn-gray" href="https://github.com/yennanliu/spotify_recommend_playlist">
+         CHECK ME ON GITHUB
          </a>
       </header>
       <main>
