fix html jinja make it can get pic url from spotify api and show up at recommend slide page

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -54,7 +54,9 @@
          {% for i in data %}
          <td>{{i}}</td>
          <div class="buddy">
-            <div class="avatar" style="display: block; background-image: url({})".format(i)>
+         <!-- jinja for loop insert value into div  -->
+         <!-- https://stackoverflow.com/questions/40486246/using-jinja2-for-unqiue-div-ids-during-loop -->
+            <div class="avatar" style="display: block; background-image: url({{i}})".format(i)>
          </div>
       </div>
       {% endfor %}
