show album url at slide recommend page

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -56,7 +56,9 @@
          <div class="buddy">
          <!-- jinja for loop insert value into div  -->
          <!-- https://stackoverflow.com/questions/40486246/using-jinja2-for-unqiue-div-ids-during-loop -->
+            <h5 style="color:#069" >  URL :  {{i}} </h5>
             <div class="avatar" style="display: block; background-image: url({{i}})".format(i)>
+            
          </div>
       </div>
       {% endfor %}
