add artist array

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,17 @@
       <script src="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.js"></script>
       <script src="https://sdk.scdn.co/spotify-player.js"></script>
       <!-- <script> var token__ = '{{ access_token }}';</script>   --> 
+      <script>
+          var artist_data = [ 
+            'the roots', 
+            'daft punk',
+            'common',
+            'dj deckstream',
+            'free tempo',
+            'Honne',
+            '33Hz'] 
+          console.log(artist_data) 
+      </script>
    </head>
    <body>
       <header>
