remove no need js variables

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -68,8 +68,8 @@
       <script src="/templates/client.js"></script>
       <script type="text/javascript"> 
          //https://stackoverflow.com/questions/42499535/passing-a-json-object-from-flask-to-javascript
-         var pic_url = ('{{ data }}').replace(/&#39;/g,"'");
-         var pic_url2 = ('data'); 
+         //var pic_url = ('{{ data }}').replace(/&#39;/g,"'");
+         //var pic_url2 = ('data'); 
          
       </script>
    </body>
