update tab layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
             <div class="navbar-collapse collapse">
                <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
-                  <li><a href="/artist_recommend">Artist_recommend</a></li>
-                  <li><a href="/slide_recommend">Slide_recommend</a></li>
-                  <li><a href="/others">others</a></li>
-                  <li><a href="/dev">dev</a></li>
+                  <li><a href="/artist_recommend">Artist_Recommend</a></li>
+                  <li><a href="/slide_recommend">Slide_Recommend</a></li>
+                  <li><a href="/others">Others</a></li>
+                  <li><a href="/dev">Dev</a></li>
                </ul>
             </div>
          </div>
