remove no need pages

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -14,10 +14,8 @@
             </div>
             <div class="navbar-collapse collapse">
                <ul class="nav navbar-nav">
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/artist_recommend">Artist_Recommend</a></li>
+                  <li><a href="/">Artist_Recommend</a></li>
                   <li><a href="/slide_recommend">Slide_Recommend</a></li>
-                  <li><a href="/others">Others</a></li>
                   <li><a href="/dev">Dev</a></li>
                </ul>
             </div>
