add html page title

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -33,6 +33,18 @@
       <script src="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.js"></script>
    </head>
    <body>
+      <header>
+         <h1>
+            Song Recommendation 
+         </h1>
+         <h4>
+            via Python/Flask/Spotify API 
+         </h4>
+         <a class="btn btn-gray btn-gray" href="https://github.com/yennanliu/spotify_recommend_playlist">
+         CHECK ME ON GITHUB
+         </a>
+      </header>
+
       <div id="container2">
          <div class="buddy" style="display: block;">
             <div class="avatar"  style="display: block; background-image: url(https://t2.genius.com/unsafe/600x600/https%3A%2F%2Fimages.genius.com%2F9f8cba3d7fe4e1fd4bc450c69d409af6.1000x1000x1.jpg)"></div>
