add page sub-title

--- a/templates/slide_recommend.html
+++ b/templates/slide_recommend.html
@@ -34,9 +34,8 @@
    </head>
    <body>
       <header>
-         <h1>
-            Song Recommendation 
-         </h1>
+         <h1>Song Recommendation</h1>
+         <h3>//Slide_Recommend</h3>
          <h4>
             via Python/Flask/Spotify API 
          </h4>
