--- a/templates/index.html
+++ b/templates/index.html
@@ -54,10 +54,10 @@
       </script>
    </head>
    <body>
-      <header>
-         <h1>
-            Song Recommendation 
-         </h1>
+      <header> 
+         <h1>Song Recommendation </h1> 
+         <h3>//Artist_Recommend</h3>
+
          <h4>
             via Python/Flask/Spotify API 
          </h4>
